# PhyloBuilder

./: .gitignore  ConCatFastas.py  EBImsa.py  GetFastas.py  README.md  pyproject.toml
examples/: species_list.txt
phylobuilder/: ConCatFastas.py  EBImsa.py  GetFastas.py
