[tool.poetry]
name = "phylobuilder"
version = "0.1.0"
description = ""
authors = ["Tomas Jelinek <tomgolf.jelinek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
biopython = "^1.83"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
